<resources>
    <string name="app_name">GoalTribe</string>
    <string name="default_web_client_id">97300424643-grv56kd5f9t9t8numteg4rko68jq91qc.apps.googleusercontent.com</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="my_goals">My Goals</string>
    <string name="my_tribe">My Tribe</string>
    <string name="join_or_create_tribe">Join or Create Tribe</string>
    <string name="_30_day_fitness_challenge">30-Day Fitness Challenge</string>
    <string name="join_challenge">Join Challenge</string>
    <string name="shared_challenges">Shared Challenges</string>
    <string name="welcome_back_please_log_in_to_continue">Welcome back! Please log in to continue.</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_new_challenge">Create New Challenge</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="description">Description</string>
    <string name="visibility">Visibility</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="set_a_new_goal">Set a New Goal</string>
    <string name="goal_name">Goal Name</string>
    <string name="run_3_times_a_week">Run 3 times a week</string>
    <string name="stretch_daily">Stretch daily</string>
    <string name="target_date">Target Date</string>
    <string name="select_date">Select Date</string>
    <string name="train_for_the_race_and_stay_healthy">Train for the race and stay healthy 🏃</string>
    <string name="save_goal">Save Goal</string>
    <string name="what_would_you_like_to_add">What would you like to add?</string>
    <string name="add_goal">Add Goal</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="create_or_join_tribe">Create or Join Tribe</string>
    <string name="create_tribe">Create Tribe</string>
    <string name="select_tribe_image">Select Tribe Image</string>
    <string name="description_new">Description</string>
    <string name="category">Category</string>
    <string name="cancel_new">Cancel</string>
    <string name="create_new">Create</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="display_name">Display Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile_new">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="you_earned_a_cheer">You earned a cheer!</string>
    <string name="challenge_title_30_day_run_streak">Challenge Title: 30-Day Run Streak</string>
    <string name="this_challenge_requires_you_to_run_or_walk_for_at_least_30_minutes_every_single_day_for_one_month">This challenge requires you to run or walk for at least 30 minutes every single day for one month.</string>
    <string name="run_a_5k">Run a 5k</string>
    <string name="tribe_name">Tribe Name</string>
    <string name="category_new">Category</string>
    <string name="welcome_back_new">Welcome Back!</string>

</resources>